# pika

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  justfile
.github/workflows/: apple-mini-validate.yml  ios-testflight.yml  pre-merge.yml  release.yml
ci/: forge-lanes.toml
cli/: Cargo.toml
cli/src/: main.rs
crates/hypernote-protocol/: Cargo.toml
crates/ph/: Cargo.toml
crates/pika-agent-control-plane/: Cargo.toml
crates/pika-agent-microvm/: Cargo.toml
crates/pika-agent-protocol/: Cargo.toml
crates/pika-desktop/: Cargo.toml
crates/pika-marmot-runtime/: Cargo.toml
crates/pika-media/: Cargo.toml
crates/pika-media/examples/: duplex_test.rs
crates/pika-news/: Cargo.toml  README.md  pika-news.example.toml
crates/pika-nse/: Cargo.toml
crates/pika-nse/src/: lib.rs
crates/pika-relay-profiles/: Cargo.toml
crates/pika-server/: Cargo.toml
crates/pika-share/: Cargo.toml  uniffi.toml
crates/pika-share/src/: lib.rs
crates/pika-tls/: Cargo.toml
crates/pikachat-sidecar/: Cargo.toml
crates/pikahut/: Cargo.toml
crates/rmp-cli/: Cargo.toml
crates/vm-spawner/: Cargo.toml
docs/: forge-hosted-manual-qa.md  how-to-run-e2e-ui-tests-with-video.md  incus-dev-lane.md  incus-migration-plan.md  ios-testflight-ci.md  pika-share-plan.md  pikaci-apple-remote-access.md
docs/testing/: ci-selectors.md  integration-matrix.md  library-first-migration-checklist.md  shared-fixture-corrective-finish.md  wrapper-deprecation-policy.md
infra/: justfile
ios/: project.yml
just/: agent.just  checks.just
rust/: Cargo.toml
rust/src/: actions.rs  (+4 more)
scripts/: agent-brief  agent-chat-demo.sh  agent-demo-incus.sh  agent-tools  apple-host-prepare.sh  apple-host-record-prepared-entry  apple-host-run-prepared-entry  demo-agent-incus.sh  demo-agent-microvm.sh  encrypt-pikaci-apple-secrets  incus-dev-image.sh  incus-dogfood-check.sh  pika-build-prewarm-workspace-deps.sh  pika-build-run-workspace-deps.sh  pikaci-apple-host-bootstrap.sh  pikaci-apple-remote.sh  pikaci-ci-run.sh  pikaci-shadow-summary.py  pikaci-staged-linux-remote.sh  test_pikaci_tools_json.py  with-pikaci-apple-ci-env
secrets/: pikaci-apple.env.age
todos/: chat-view-refactor.md  ci-coverage-gaps.md  hypernote-iced-feasibility-study.md  hypernote-iced-phased-plan.md  hypernote-mdx-concrete-api-requests.md  hypernote-mdx-feature-requests.md  hypernote-unified-rendering-plan.md  microvm-launcher-simplify.md  pikaci-staged-ci-plan.md  pikahut-full-test-suite-refactor.md  pikahut-shared-fixtures.md  remove-public-infra-tests.md  tests-living-plan.md
tools/: interop-rust-baseline  ios-ui-test  primal-ios-interop-nightly  run-ios  ui-e2e-local  ui-e2e-public  xcode-run  xcodebuild-compact
uniffi-bindgen/: Cargo.toml
(+165 files in other folders)
