[package]
name = "pika-nse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
keyring-core = { workspace = true }
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr = { workspace = true }
pika-tls = { path = "../pika-tls" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uniffi = { workspace = true }
ureq = "3"

[target.'cfg(not(target_os = "android"))'.dependencies]
libsqlite3-sys = { workspace = true, features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "android")'.dependencies]
libsqlite3-sys = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { workspace = true }
