[package]
name = "pika-share"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uniffi = "0.31.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
